smooth mask in sculpt produces artifacts. #71667

Closed
opened 2019-11-19 03:47:27 +01:00 by Massimiliano Puliero · 10 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: 115a5bf65a

Short description of error
smooth mask in sculpt mode produces artifacts.

Exact steps for others to reproduce the error
please check the video

https://youtu.be/FW3wxz3FN0w

thank you

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: `115a5bf65a` **Short description of error** smooth mask in sculpt mode produces artifacts. **Exact steps for others to reproduce the error** please check the video https://youtu.be/FW3wxz3FN0w thank you

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looks like a private video.
[videos can help btw., but often these are not enough for a complete bug report, so please also share your .blend file and steps to reproduce...]

Looks like a private video. [videos can help btw., but often these are not enough for a complete bug report, so please also share your .blend file and steps to reproduce...]

yes, sorry, now the video should be available.

I attached the blend file.

how to reporduce:
1- create a grid
2- assign multi-resolution modifier at level 4 or 5
3- create a very sharp mask using the lasso tool
4- use the mask brush to smooth the borders of the mask.

thank you.
Max

mask_err.blend

yes, sorry, now the video should be available. I attached the blend file. how to reporduce: 1- create a grid 2- assign multi-resolution modifier at level 4 or 5 3- create a very sharp mask using the lasso tool 4- use the mask brush to smooth the borders of the mask. thank you. Max [mask_err.blend](https://archive.blender.org/developer/F8141904/mask_err.blend)
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Cannot reproduce here.
Tried both on preview level 0 and preview level 4.
Tried both in your file and from scratch.

System Information
Operating system: Linux-5.3.7-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21
version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: 115a5bf65a

Not sure if this has anything to do with {blender/blender-staging@fe86375d1c}?
Does this happen without Addons as well?

CC @PabloDobarro

Cannot reproduce here. Tried both on preview level 0 and preview level 4. Tried both in your file and from scratch. **System Information** Operating system: Linux-5.3.7-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: `115a5bf65a` Not sure if this has anything to do with {blender/blender-staging@fe86375d1c}? Does this happen without Addons as well? CC @PabloDobarro

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Can confirm... But this only happens when using the Multires mod. On regular mesh it works fine.

Can confirm... But this only happens when using the Multires mod. On regular mesh it works fine.
Pablo Dobarro self-assigned this 2019-11-19 16:36:37 +01:00

This issue was referenced by b6d436ae28

This issue was referenced by b6d436ae28311a8e2e7ea0079b1fa1fb046909ab
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71667
No description provided.